--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,15 +2,18 @@ apply plugin: 'com.android.application'
 apply plugin: 'com.didi.virtualapk.host'
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion "23.0.3"
+    compileSdkVersion VERSION_COMPILE_SDK
+    buildToolsVersion VERSION_BUILD_TOOLS
 
     defaultConfig {
         applicationId "com.didi.virtualapk"
-        minSdkVersion 15
-        targetSdkVersion 15
+        minSdkVersion VERSION_MIN_SDK
+        targetSdkVersion VERSION_TARGET_SDK
         versionCode 3
         versionName "1.0.0"
+    }
+    compileOptions {
+        sourceCompatibility SOURCE_COMPATIBILITY
     }
 
     signingConfigs {
